# playwrite_scraping

./: .env  .env.example  .gitignore  cookies.json  pyproject.toml  readme.md  requirements.txt  run_api.py  scrape.py
app/: main.py  scraper.py
downloads/: Master_of_Accountancy_20260526T091241_CourseFinder.xlsx  UG_20260526T091248_CourseFinder.xlsx
